Bug 383372 - Toggle Fullscreen Embedded Terminal bug
Summary: Toggle Fullscreen Embedded Terminal bug
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Netrunner Linux
: NOR minor
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-10 18:20 UTC by Alexander Mentyu
Modified: 2018-05-06 00:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2017-08-10 18:20:57 UTC
Steps to reproduce:

1. Toggle Fullscreen Embedded Terminal in Krusader.
2. Close Krusader window.
3. Launch Krusader.
4. Toggle Fullscreen Embedded Terminal again.

Expected result:
Appearance of Fullscreen Embedded Terminal.

Actual result:
Fullscreen Embedded Terminal is showing for a split second.
Comment 1 Toni Asensi Esteve 2017-08-10 22:28:25 UTC
I tried it using Kubuntu 17.04, although I saw nothing strange.
Comment 2 Alex Bikadorov 2017-08-12 14:39:25 UTC
Can confirm this. Only if fullscreen terminal is activated without "show embedded terminal" option.
Comment 3 Alex Bikadorov 2017-08-20 16:34:09 UTC
Git commit b7980a8025e9f96b77ec625478cccfc908b566cc by Alexander Bikadorov.
Committed on 20/08/2017 at 16:31.
Pushed by abikadorov into branch 'master'.

GUI: fixed embedded terminal killed if chdir input is send too early

FIXED: [ 383372 ] Toggle Fullscreen Embedded Terminal bug

M  +12   -6    krusader/GUI/terminaldock.cpp
M  +1    -0    krusader/GUI/terminaldock.h

https://commits.kde.org/krusader/b7980a8025e9f96b77ec625478cccfc908b566cc