GUI: fixed embedded terminal killed if chdir input is send too early

FIXED: [ 383372 ] Toggle Fullscreen Embedded Terminal bug
BUG: 383372